<resources>
    <string name="app_name">Whiskey: Party Game</string>
    <string name="whiskey">Whiskey</string>
    <string name="start_button">Start</string>
    <string name="how_to_play">How to Play</string>
    <string name="pick_deck">PICK A DECK</string>
    <string name="saved_deck_button">Saved Deck</string>
    <string name="sample_deck_button">Sample</string>
    <string name="add_deck_button">Add Deck</string>
    <string name="delete_deck_button">Delete Deck</string>
    <string name="edit_deck_button">Edit Deck</string>
    <string name="sample1">Fun with Friends</string>
    <string name="sample2">18+</string>
    <string name="not_available">Not Available</string>
    <string name="enter_player_names">Enter Player Names</string>
    <string name="play_button">Play</string>
    <string name="enter_player">Enter Player</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="full_players_toast">no more space available</string>
    <string name="invite_more">Why you have no friends? Invite More!!</string>
    <string name="game_over">GAME OVER</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="saved_deck_1">Deck #1</string>
    <string name="player_turn">%s\'s turn</string>
    <string name="add_card">Add Card</string>
    <string name="delete_card">Delete Card</string>
    <string name="save">Save</string>
    <string name="empty_input">Empty Input</string>
    <string name="warning">Please Drink Responsibly\nPress Anywhere to Start the Game</string>
    <string name="how_to_play_opening_instruction">A "Do or Drink" game is a party game that involves players choosing between performing a dare (the "Do" option) or taking a drink of an alcoholic beverage (the "Drink" option). The game is typically played with a group of friends, and it can be a fun and entertaining way to spend an evening.\n\nTo play the "Do or Drink" game, follow these steps:</string>
    <string name="how_to_play_instruction1">1. Gather a group of friends who are interested in playing the game.</string>
    <string name="how_to_play_instruction2">2. Decide whether you want to play a sample deck or your own deck</string>
    <string name="how_to_play_instruction3">3. If you want to play your own deck,  you need to first create a set of dares or challenges. These dares or challenges can be as silly or as challenging as you like, and can include things like singing a song, doing a shot of a particular drink, or doing a series of push-ups.</string>
    <string name="how_to_play_instruction4">4. Before playing the game, you will need to list down the names of each players. Note: do not shorten your name, use your first name in full such as Eric, Brandon, etc.</string>
    <string name="how_to_play_instruction5">5. If a player chooses to perform the dare, they must complete it to the best of their ability. If they fail to complete the dare, they must take a drink as a penalty.</string>
    <string name="how_to_play_instruction6">6. If a player chooses to take a drink instead of performing the dare, they must finish the drink before the next round starts.</string>
    <string name="how_to_play_instruction7">7. The game continues until all the dares or challenges have been completed.</string>
    <string name="how_to_play_instruction8">8. The player who completes the most dares or challenges without taking a drink is declared the winner.</string>
    <string name="how_to_play_ending_instruction">It\'s important to remember to always drink responsibly and never pressure anyone to drink or do something they are not comfortable with. The "Do or Drink" game is meant to be a fun and lighthearted way to spend time with friends, so make sure to keep it that way.
</string>
</resources>