<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layout_weight="100">

    <TextView
        android:id="@+id/enterPlayerNames"
        android:layout_width="313dp"
        android:layout_height="52dp"
        android:fontFamily="@font/gloria_hallelujah"
        android:text="@string/enter_player_names"
        android:textAlignment="center"
        android:textColor="@color/blue_purple"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@id/player1"
        app:layout_constraintEnd_toEndOf="@id/player6"
        app:layout_constraintBottom_toTopOf="@id/player1"/>

    <TextView
        android:id="@+id/player4"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:text="Player 4"
        android:fontFamily="@font/gloria_hallelujah"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player5" />

    <TextView
        android:id="@+id/player8"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="40dp"
        android:text="Player 8"
        android:fontFamily="@font/gloria_hallelujah"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player9" />

    <TextView
        android:id="@+id/player2"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:text="Player 2"
        android:fontFamily="@font/gloria_hallelujah"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player3"  />

    <TextView
        android:id="@+id/player3"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:text="Player 3"
        android:fontFamily="@font/gloria_hallelujah"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player4"  />

    <TextView
        android:id="@+id/player5"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="Player 5"
        android:fontFamily="@font/gloria_hallelujah"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginStart="40dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/playerGuideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/player6"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="40dp"
        android:text="Player 6"
        android:fontFamily="@font/gloria_hallelujah"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player7" />

    <TextView
        android:id="@+id/player7"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="40dp"
        android:text="Player 7"
        android:fontFamily="@font/gloria_hallelujah"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player8" />

    <TextView
        android:id="@+id/player1"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:text="Player 1"
        android:fontFamily="@font/gloria_hallelujah"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player2"  />

    <TextView
        android:id="@+id/player10"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="Player 10"
        android:textSize="20sp"
        android:fontFamily="@font/gloria_hallelujah"
        android:textAlignment="center"
        android:layout_marginEnd="40dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/playerGuideline"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/player9"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="40dp"
        android:text="Player 9"
        android:fontFamily="@font/gloria_hallelujah"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/player10"/>

    <EditText
        android:id="@+id/playerInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Name"
        android:ems="11"
        android:fontFamily="@font/inter_bold"
        android:hint="@string/enter_player"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:background="@drawable/saved_deck_detail_edittext"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerGuideline"/>

    <Button
        android:id="@+id/playButton"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue_purple"
        android:text="@string/play_button"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue_purple"
        android:text="@string/clear"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/playerInput"
        app:layout_constraintTop_toBottomOf="@id/playerInput"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue_purple"
        android:text="@string/add"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/playerInput"
        app:layout_constraintTop_toBottomOf="@id/playerInput"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/playerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />


</androidx.constraintlayout.widget.ConstraintLayout>